[package]
name = "proto"
version = "0.1.0"
authors = ["Redrield <redrield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.115", features = ["derive"] }
serde_json = "^1.0.57"
thiserror = "1.0.20"
rmpv = "0.4.5"
rmp-serde = "0.14.4"
