[package]
name = "server"
version = "0.1.0"
authors = ["Redrield <redrield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.3", features = ["unstable"] }
async-tungstenite = "0.8.0"
serde_json = "1.0.57"
proto = { path = "../proto" }
futures-util = "0.3.5"
futures = "0.3.5"
thiserror = "1.0.20"
serde_cbor = "0.11.1"
anyhow = "1.0.32"
log = "0.4.11"
rand = "0.7.3"
itertools = "0.9.0"
env_logger = "0.7.1"
rmp-serde = "0.14.4"
